@@ -1,0 +1,11 @@
+.. default-domain:: cpp
+
+.. class:: template<typename T> A
+
+   .. type:: N1 = T::typeOk
+
+   - Not ok, warn: :type:`T::typeWarn`
+
+   .. type:: N2 = T::U::typeOk
+
+   - Not ok, warn: :type:`T::U::typeWarn`
